# rocket-sample-web-backend

./: Cargo.toml  Rocket.toml
migrations/: 20240210181236_users.sql
src/: main.rs
src/guards/: mod.rs  user_authentication.rs
src/models/: errors.rs  mod.rs  user_auth.rs  user_dtos.rs  user_records.rs  user_roles.rs  users.rs
src/routes/: mod.rs  person.rs  user_authentication.rs
src/traits/: database_model.rs  mod.rs
src/utils/: port.rs
